# CMake-Templates

./: .gitattributes  .gitignore  readme.txt
Example-OpenCV-Color-Detector/: CMakeLists.txt  full-rebuild-debug.ps1  main.cpp  readme.txt
Example-OpenCV-Color-Detector/include/: ColorDetector.hpp  DisplayManager.hpp  ImageLoader.hpp
Example-OpenCV-Color-Detector/src/: DisplayManager.cpp
Template-CMakeLists/: CMakeLists-Standard.txt  CMakeLists-with-OpenCV-Manual-DLLs.txt
Template-CMakeLists/Batch-Powershell-Driven/: full-rebuild-debug.ps1  readme.txt
Template-CMakeLists/Standalone/: CMakeLists-with-OpenCV-Auto-DLLs.txt
Template-OpenCV-Modular/: .gitattributes-NOTUSED  .gitignore-NOTUSED  CMakeLists.txt  full-rebuild-debug.ps1  full-rebuild-release.ps1  launch-all.ps1  launch-menu.bat  launch-menu.ps1  readme.txt
Template-OpenCV-Modular/Project1/include/: project1.hpp
Template-OpenCV-Modular/Project2/: main.cpp
Template-OpenCV-Modular/Project2/include/: project2.hpp
Template-OpenCV-Modular/Project2/src/: project2.cpp
Template-OpenCV-Orchestrated/: CMakeLists.txt  CMakeSettings.json  full-rebuild-debug.ps1  full-rebuild-release.bat  full-rebuild-release.ps1  launch-all.bat  main.cpp  readme.txt
Template-OpenCV-Orchestrated/Project1/: CMakeLists.txt  main.cpp
Template-OpenCV-Orchestrated/Project2/: CMakeLists.txt
Template-OpenCV-Orchestrated/archive/: _Project Base - Separate These.cmake
Template-OpenCV-Standalone/: CMakeLists.txt  full-rebuild-debug.ps1
Template-OpenCV-Standalone/src/: project1.cpp
